<resources>
    <string name="app_name">Ponto PPGC</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Cartão não pode ser vazio</string>
    <string name="invalid_password">Senha deve ser maior que 5 caracteres</string>
    <string name="login_failed">"Login failed"</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="nro_cart_o_ufrgs">Nro. Cartão UFRGS</string>
    <string name="title_activity_menu">MainActivity</string>
    <string name="title_home">Marcar presença</string>
    <string name="title_dashboard">Visualizar presenças marcadas</string>
    <string name="title_notifications">Agendar ausências</string>
    <string name="agendar_aus_ncias">Agendar ausências</string>
    <string name="presen_as">Presenças</string>
    <string name="marcar_presen_a">Marcar presença</string>
    <string name="salvar">Salvar</string>
    <string name="observa_o">Observação</string>
    <string name="agendar_aus_ncia">Agendar ausência</string>
    <string name="visualizar_presen_as">Visualizar presenças</string>
    <string name="bom_dia">Bom dia</string>
    <string name="textview">TextView</string>
    <string name="ponto_ppgc">Ponto PPGC</string>
</resources>