<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgendarAusenciaActivity">

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="357dp"
        android:layout_height="367dp"
        android:selectedWeekBackgroundColor="#ED1919"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095" />

    <EditText
        android:id="@+id/editTextObs"
        android:layout_width="314dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="166dp"
        android:layout_marginRight="166dp"
        android:layout_marginBottom="116dp"
        android:ems="10"
        android:hint="@string/observa_o"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView"
        app:layout_constraintVertical_bias="0.0"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="285dp"
        android:layout_marginLeft="285dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginBottom="65dp"
        android:text="@string/salvar"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextObs" />

    <Button
        android:id="@+id/btnAgendados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="65dp"
        android:text="Agendadas"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSalvar"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextObs" />

    <Button
        android:id="@+id/btnMarcarpresenca"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="52dp"
        android:text="@string/marcar_presen_a"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnVisPresencas"
        app:layout_constraintStart_toEndOf="@+id/btnMenu" />

    <Button
        android:id="@+id/btnAgendarAusencias"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="52dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/agendar_aus_ncia"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnVisPresencas" />

    <Button
        android:id="@+id/btnVisPresencas"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="120dp"
        android:layout_height="52dp"
        android:text="@string/visualizar_presen_as"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnAgendarAusencias"
        app:layout_constraintStart_toEndOf="@+id/btnMarcarpresenca" />

    <Button
        android:id="@+id/btnMenu"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="90dp"
        android:layout_height="52dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="Menu"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnMarcarpresenca"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>