<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MarcarPresencaActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="134dp"
        android:layout_height="133dp"
        android:src="@drawable/ic_baseline_qr_code_scanner_24"
        app:layout_constraintBottom_toTopOf="@+id/btnScan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.493" />

    <Button
        android:id="@+id/btnScan"
        android:layout_width="199dp"
        android:layout_height="134dp"
        android:text="Escanear QR Code"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.605" />

    <Button
        android:id="@+id/btnMarcarpresenca"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="52dp"
        android:text="@string/marcar_presen_a"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnVisPresencas"
        app:layout_constraintStart_toEndOf="@+id/btnMenu" />

    <Button
        android:id="@+id/btnAgendarAusencias"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="52dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/agendar_aus_ncia"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnVisPresencas" />

    <Button
        android:id="@+id/btnVisPresencas"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="120dp"
        android:layout_height="52dp"
        android:text="@string/visualizar_presen_as"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnAgendarAusencias"
        app:layout_constraintStart_toEndOf="@+id/btnMarcarpresenca" />

    <Button
        android:id="@+id/btnMenu"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="90dp"
        android:layout_height="52dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="Menu"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnMarcarpresenca"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>